--- a/content/8-posters/45.md
+++ b/content/8-posters/45.md
@@ -1,10 +1,108 @@
 ---
 label: "45"
 title: "On Color Change in Seventeenth-Century Netherlandish Paintings after Wax-Resin Lining"
-short_title:
+short_title: "On Color Change in Seventeenth-Century Netherlandish Paintings After Wax-Resin Lining"
 layout: essay
 order: 450
 contributor:
-  - first_name: Emilie
-    last_name: Froment
+  - first_name: "Emilie"
+    last_name: "Froment"
+    title: "Lecturer"
+    affiliation: "University of Amsterdam"
+keywords:
+abstract: "Wax-resin lining is known to alter colors in paintings. To date, however, only a few research studies have investigated the conditions under which the alteration may occur and the extent of the change. This research focuses on color change in ground layers of seventeenth-century Netherlandish paintings. Central to the research methodology is visual examination and color measurements of reconstructions based on material evidence from paintings and documentary research relevant to the period. The procedure used for the wax-resin treatment is also designed based on historical evidence. The research results revealed that the composition of the ground, the layer thickness, and the hiding power of the ground are influential in the degree of change."
 ---
+
+## Introduction
+
+Wax-resin lining was invented in the Netherlands in the first half of the nineteenth century. Until the 1970s, it was considered an all-over cure for structural alterations in canvas paintings and therefore was used extensively by conservators in the Netherlands and abroad. The technique, however, proved to have detrimental effects on paintings’ material and physical characteristics, including color changes. Although today the use of wax-resin lining is almost extinct, most paintings preserved in the Netherlands received this treatment in the past.
+
+This research examined the impact of wax-resin linings on the color of ground layers in seventeenth-century Netherlandish paintings on canvas ([[Froment 2019]]). In these works, the ground is often left visible and used as a middle tone. Therefore, any color change of the ground would significantly alter the overall aesthetic of the painting. Furthermore, color change is considered a sign of the modification of the painting’s materials, which is relevant for the future conservation of these works. The results of the research aim to support the work of conservation professionals in identifying color change due to lining, thus preventing misinterpretation of the works and enabling an adaption of conservation strategies.
+
+## Hypothesis
+
+Material evidence found in four paintings by Jacob Jordaens (1593–1678) in the Royal Palace Amsterdam provided the basis for the research hypothesis ([**fig. 45.1**](fig-45-1)).[^1]
+
+Technical examination revealed that though the paintings were in different states of condition, they had aged in identical environments and received similar restoration treatments, including wax-resin linings in 1963 ([[van Eikema Hommes and Froment 2011]]). Differing degrees of darkness were particularly striking ([**figs. 45.2**](fig-45-2), [**45.3**](fig-45-3)).
+
+Analysis of paint cross sections from each of the paintings highlighted the use of different ground types that varied in both the number of layers and material composition as well as the type of binding medium. The correlation between material evidence and documentary sources that report color change in paintings after wax-resin lining supported the hypothesis that the visual consequence of wax-resin linings in seventeenth-century Netherlandish paintings is related to the original preparation technique.
+
+## Experimental Conditions
+
+Central to the research was the study of visual phenomena observed on naturally aged ground reconstructions.
+
+### The Reconstructions
+
+The materials and techniques used for the reconstruction were based on material evidence from paintings selected for their relevance to the research. These included works by Jordaens in the Royal Palace Amsterdam as well as paintings by Gerard van Honthorst (1592–1656) and Theodor van Thulden (1606–1678) created for the Oranjezaal, a painted ballroom in the Huis ten Bosch, a royal palace just outside of The Hague. *The Night Watch,* 1642, by Rembrandt (1606/7–1669) was also considered.
+
+Technical study of the grounds of these paintings identified three types of single ground and four types of double ground, with colors of either off-white, beige, red, brown, or gray. Mineral composition was analyzed with a scanning electron microscope with energy dispersive X-ray. Binding media were investigated using gas chromatography–mass spectrometry (GC-MS) and Fourier transform infrared spectroscopy (FTIR). Ground recipes found in documentary sources from the period and results of technical research from other paintings were also incorporated ([[Stols-Witlox 2017]]).
+
+Thirty-two different ground types were reconstructed. Each of them was applied in a single layer on linen canvas previously sized with gelled animal glue. The mineral components used for the grounds were chalk, lead white, raw umber, yellow iron oxide, red iron oxide, tile red, charcoal black, quartz, and ball clay. Each type was used both independently and in mixtures of various ratios. Two types of binding media were used: linseed oil and animal glue.
+
+### Ground’s Hiding Power
+
+As the color of linen canvas darkens dramatically after wax-resin impregnation, the degree to which a ground layer hides the underlying canvas was hypothesized to be a key parameter for color change in paintings after wax-resin treatment. To investigate the influence of grounds’ hiding power, a pilot study was conducted, consisting of the systematic application of each ground type in different thicknesses onto opacity charts. These applications were subjected to color measurements in order to determine the degree of hiding power of each group type at a specific thickness.
+
+### Wax-Resin Lining
+
+Research into wax-resin lining methods used by conservators in the Netherlands supported the choice for the lining of the reconstructions. The procedure simplified historical practices in order to minimize variables. Essentially, it included the impregnation of reconstructions with a wax-resin mixture composed of 10 parts beeswax to 3 parts colophony (weight/weight). The adhesive was applied warm on the reverse of the reconstructions and melted into them using a hot handheld iron.
+
+### Analytical Techniques
+
+Color measurements were recorded with a CM-2600d Konica Minolta spectrophotometer in the CIELAB color space. The 1976 formula was used to measure color difference (∆E\*) and evaluate the degree of hiding power. Furthermore, cross sections from the reconstructions were analyzed using light microscopy, providing further insight into the effects of ground layer thickness.
+
+## Results
+
+### General Trends
+
+Result showed that wax-resin impregnation caused color change in 19 of the 32 ground types tested.
+
+Comparative color measurements revealed that the extent of change was influenced by the type of binding medium and both the type and proportion of mineral components. Ground layer thickness was also influential; in general, the thinner the ground, the more significant the color change. Furthermore, the pilot study showed that the extent of color change was related to the degree of hiding power of the ground; all oil-bound grounds that changed color were measured as poorly hiding.
+
+Comparative color measurements showed that nearly all reconstructions that underwent color change became darker and cooler (L\*, a\*, and b\* values decreased). An exception to this was the ground composed of chalk in animal glue, which changed predominately to a more yellow hue.
+
+### Grounds Composed of One Type of Mineral
+
+An experiment investigated the influence of pigment type and binding medium on the degree of color change. For this purpose, reconstructed grounds contained a single pigment type bound in either oil or glue.
+
+After impregnation, each glue-bound reconstruction changed color significantly, with differences ranging from 12.21 to 22.09 ∆E\* units.
+
+For the oil-bound grounds, those composed of either ball clay or chalk measured the most altered after treatment, by 3.26 and 5.4 ∆E\* units respectively. The grounds composed of either red iron oxide, yellow iron oxide, raw umber, or charcoal black did not undergo change, and the ground containing lead white changed only when thinly applied, by 1.5 ∆E\*.
+
+In general, color measurements showed that glue-bound grounds changed more significantly than oil-bound, thus highlighting the influence of binding medium. It was assumed that voids inherently present in glue-bound grounds filled with wax resin, resulting in modification of refractive index and surface texture, thus causing color change. In contrast with the behavior of glue-bound grounds, the impregnation of wax-resin adhesive into the oil-bound grounds was never observed during the wax-resin treatment. For these reconstructions, color change was believed to be caused by the degree of hiding power of the ground. This assumption was supported by the pilot study, which showed that grounds containing either chalk or ball clay had poor hiding power.
+
+After impregnation, the glue-bound ground composed of chalk and the oil-bound grounds composed of chalk, lead white, and ball clay developed a typical “abraded look” ([**figs. 45.4**](fig-45-4) and [**45.5**](fig-45-5)).
+
+Color measurements of these grounds reported significant differences in hiding power as a result of layer thickness. As thickness varies considerably due to the inherent irregular texture of canvas supports, the color change of these grounds was more significant on the highest points of the canvas weave, resulting in local darkening ([**fig. 45.6**](fig-45-6)).
+
+Also key is the tonal value of the grounds that contrasted significantly with the darkened support.
+
+### Chalk-Containing Oil-Bound Grounds
+
+Another experiment examined the influence of the proportion of chalk on color change in reconstructed oil-bound grounds containing yellow iron oxide and/or raw umber as well as lead white with and without raw umber. Variables of the experiment included pigment ratio and layer thickness. In general, the color measurements showed that the higher the concentration of chalk, the more significant the change. Furthermore, the thinner the layer, the more visible the color change. However, the extent of the change was dependent on the type of pigment the chalk was mixed with.
+
+For example, the ground composed of lead white with 50% chalk changed by 5.91 ∆E\* units, while the ground composed of lead white with 80% chalk changed more markedly, from 6.9 to 8.27 ∆E\* units, depending on thickness. The influence of chalk was further shown when comparing these results to the reconstruction composed of lead white in oil, which changed only by 1.5 ∆E\* units when thinly applied. Color measurements also showed that the inclusion of 10% raw umber to the grounds composed of lead white and chalk prevented color change, as no difference was measured when the proportions of chalk were 45% and 70%. In these latter instances a thinner application did not cause color change.
+
+The influence of chalk on color change was also measured in reconstructed grounds composed of chalk combined with yellow iron oxide and/or raw umber. Grounds composed of 98% chalk combined with either yellow iron oxide or 1:1 yellow iron oxide and raw umber changed color more noticeably when thinly applied.
+
+By correlating experimental results from the reconstructions with results of the pilot study, it was found that an increased proportion of chalk reduced the hiding power of nearly all grounds. Furthermore, the study revealed that grounds composed of 98% chalk combined with either yellow iron oxide or 1:1 yellow iron oxide and raw umber, as well as the ground composed of 80% chalk with lead white, hid the opacity charts to varying degrees that were dependent on thickness. Ground types composed of chalk combined with raw umber and lead white remained opaque regardless of thickness. Results for grounds composed of chalk with yellow iron oxide were not conclusive.
+
+### Quartz-Containing Oil-Bound Grounds
+
+After 1642, canvas paintings by Rembrandt are frequently primed with a quartz containing ground. Results of technical analysis revealed that this ground consists mainly of clay minerals, with a high proportion of quartz sand in linseed oil ([[Groen 2005]]). Research suggests that the composition of quartz ground varies among paintings, with the variables including the type of clay minerals and the proportion of trace elements such as chalk, iron oxide, and carbon black. An experiment in this study examined the influence of the clay-to-quartz ratio, as well as the effect of adding of yellow iron oxide on the extent of color change.
+
+Each quartz-containing oil-bound ground showed substantial color change following impregnation ([**fig. 45.7**](fig-45-7)). The change was among the most significant of all oil-bound grounds tested, with differences ranging from 4.23 to 6.80 ∆E\* units. Trends indicated that the higher the ratio of quartz to clay, the greater the change. Although the inclusion of 3% yellow iron oxide tended to reduce this effect, color change remained significant. Finally, each of the quartz-containing grounds tested changed color to a similar extent regardless of thickness.
+
+This series of grounds proved to have the poorest hiding power of all grounds tested ([**fig. 45.8**](fig-45-8)). This condition was most pronounced in samples where the ground was applied thickly, while most other grounds examined in this study were opaque under those conditions. Furthermore, the pilot study indicated that the higher the concentration of quartz, the poorer the hiding power, supporting the influence of hiding power on the color change of the reconstructions.
+
+## Conclusion
+
+The study of visual phenomena observed on historically informed reconstructions was central to this research. The reconstructions are a simplification of the material and physical complexities usually found in historical paintings. This approach proved to be beneficial, since it allowed clarity of conditions and understanding of the extent to which wax-resin linings may have changed the color of paintings. It also permitted the identification of physical phenomena resulting from lining treatment.
+
+{% backmatter %}
+
+## Notes
+
+{% endbackmatter %}
+
+[^1]: The paintings by Jordaens in the Royal Palace Amsterdam are *Peace Between the Romans and the Batavians*, 1661–1662; *A Roman Camp under Attack by Night*, 1661–1662; *Samson Defeats the Philistines*, 1661; and *David and Goliath*, 1664–1666.
