--- a/content/8-posters/48.md
+++ b/content/8-posters/48.md
@@ -1,14 +1,88 @@
 ---
 label: "48"
 title: "Removing Beeswax Residues from the Structure of the Canvas with AEROSIL"
-short_title:
+short_title: "Removing Beeswax Residues with AEROSIL"
 layout: essay
 order: 480
 contributor:
-  - first_name: Marina
-    last_name: Voronina
-  - first_name: Ekaterina
-    last_name: Morozova
-  - first_name: Maria
-    last_name: Churakova
+  - first_name: "Marina"
+    last_name: "Voronina"
+    title: "Conservator"
+    affiliation: "Department of Scientific Conservation of Oil Paintings, State Research Institute for Restoration, Moscow"
+  - first_name: "Ekaterina"
+    last_name: "Morozova"
+    title: "Conservation Scientist"
+    affiliation: "Laboratory of Physical and Chemical Research, State Research Institute for Restoration, Moscow"
+  - first_name: "Maria"
+    last_name: "Churakova"
+    title: "Department Head"
+    affiliation: "Scientific Conservation of Oil Paintings, State Research Institute for Restoration, Moscow"
+keywords:
+abstract: "The paper presents the results of the case study in which a solvent paste based on fumed silica (AEROSIL) was applied to remove beeswax from a canvas structure. The restored object was a portrait painted by Russian artist Fyodor Rokotov. The painting had a large tear that had been previously fixed with beeswax, and ground losses had also been filled with beeswax and had oil overpaints. The removal of beeswax residues using AEROSIL paste enabled thread-by-thread tear mending using polyvinyl butyral adhesive, as well as the use of water-based glue to consolidate the paint layer. Lining the original canvas was avoided as a result of these treatments."
 ---
+
+## Introduction
+
+The application of wax and wax-resin materials was a common practice in conservation and restoration in Russia from the nineteenth century until the last quarter of the twentieth. Due to their high stability and availability, these materials were used for a wide range of operations: lining, strip-lining, tear mending, and consolidation of ground and paint layer. Wax-resin lining began to be used in Russia from the mid-twentieth century ([[Gorin and Cherkasova 1977\|, 113]]).
+
+The main reasons for using wax and wax-resin compositions for consolidation were interlayer cleavage, flaking of the paint layer from oil ground, previous restoration with wax-resin, the deterioration of paintings caused by mildew or heat, and the like ([[Gorin and Cherkasova 1977\|, 110]]). Nonetheless, the authors of Russian manuals on restoration mentioned the negative consequences of using wax-resin adhesives that had been observed. For example, *The Restoration of Easel Oil Paintings* states, “Wax-resin composition has a number of negative properties for lining. Impregnating porous chalk grounds, it changes the general tone of the painting towards darkening, especially in the light areas of the picture. During lining the wax-resin composition impregnates the author’s canvas and practically cannot be removed from the picture. It destroys the hygroscopic properties of the canvas, which are necessary for correcting canvas deformations, the picture loses its elasticity, becomes firm and heavy.” ([[Gorin and Cherkasova 1977\|, 129]]).
+
+After the negative effects of wax and wax-resin impregnation of canvas paintings were scientifically proven and presented by Gustav Berger and Harold Zeliger in 1975, the application of these materials by Russian conservators came to be limited, primarily performed only for the consolidation of murals made in oil technique ([[Fedoseeva 1999\|, 24–36]]).
+
+One of the great problems mentioned by Berger and Zeliger is the difficulty of removal of wax and wax resin from the structure of canvas ([[Berger and Zeliger 1975]]). Wax treatment limits the use of other restoration materials, particularly water-based ones, for conservation. In this regard, diverse methods of wax/wax-resin extraction have been developed and suggested. The most widely adopted method is the use of a heated spatula and filter paper for absorption of melting wax. The main disadvantage of such a procedure is that, during heating, wax is only partly absorbed by the paper, and it also penetrates deeper in the structure of canvas fibers.
+
+Another popular method of wax removal is mineral-spirit compresses. After being subjected to the solvent, wax softens and can be easily taken away—but only from the surface of the canvas. In 1988, Landgrebe suggested using solvent pastes based on hydroxypropyl cellulose (Klucel M) and solvent mixtures ([[Nicolaus 1999\|, 95]]).
+
+To achieve more complete removal of wax-resin adhesives, any such treatment should be done on a low-pressure table. However, not every conservation studio is equipped with one. Thus, searching for a material that can effectively absorb wax and wax-resin residues from the structure of canvas paintings without special equipment is a focus area.
+
+## A New Process for Wax Removal
+
+In 2004, in the State Research Institute for Restoration (GOSNIIR), in Moscow, Russia, Vilena Kireeva and Maria Churakova developed a procedure of removing oil-resin stains from the canvas structure with pyrogenic silicon dioxide (trade name AEROSIL) ([[Kireeva and Churakova 2013]]). This procedure was first applied during the restoration of the painting *Adoration of the Magi* by the eighteenth-century German artist Johann Knechtel ([[Churakova 2005]]). Earlier, the same substance had been successfully used to clean old, dried oil from a parchment in the Department of Conservation of Medieval Manuscripts at GOSNIIR.[^1]
+
+This poster presents the results of the case study of applying an AEROSIL and mineral spirit mixture to remove beeswax from a canvas.
+
+## Materials
+
+AEROSIL is a trade name of a line of fumed silica (SiO~2~) products produced by the German chemical company Evonik Industries. It is a pure, very fine powder with a specific surface area of 50 m^2^/g or more. AEROSIL is synthesized during flame hydrolysis (T \>1000°C) of silicon tetrachloride (SiCl~4~) by the following reaction:
+
+SiCl~4~ + 2H~2~ + O~2~ = SiO~2~ + 4HCl
+
+The adsorption properties of AEROSIL are determined by silanol (SiOH) and siloxane (SiOSi) functional groups presented on its surface ([[Evonik n.d.]]; [[Zhuravlev 2000]]).
+
+For beeswax removal, purified mineral spirit (Maimeri) was used as a solvent. AEROSIL and mineral spirit were mixed in ratio of 1 mg to 10 ml (respectively), until the mixture form a transparent, gel-like substance.
+
+### Procedure Outline
+
+Kireeva and Churakova offered two ways of working with the paste. In the first, the paste is spread on the stain that needs to be removed and is covered with cellophane film to prevent solvent evaporation (in their work, ethanol was used). For better absorption, the paste is applied in a thick layer using a metal spatula or palette knife and left for ten to fifteen minutes. In the case study described by the authors, the paste was colored by the removed resin ([[Kireeva and Churakova 2013]]). After the specified time, the cellophane film is removed to allow the solvent to evaporate. The solvent is considered to have evaporated from the paste when the latter loses its transparency. The dried paste, with the absorbed material, is then cleaned from the surface of the canvas with scalpel, bristle brush, and vacuum cleaner. These operations should be repeated until the maximum possible stain removal has occurred.
+
+The second method employs heat to accelerate the absorption process. This option works more effectively in the case of thicker and uneven stains. The paste is applied on the treated area, covered with fluoroplastic film, and ironed with a heated spatula at a temperature of 40°C–50°C for around three to five minutes. After the heating procedure, the fluoroplastic film is removed, and the paste is left on the treated area surface until the solvent evaporates. As in the first method, the solvent is considered evaporated when the paste loses its transparency and becomes whitish or colored with the resin. Cleaning the residues of the paste from the surface of the canvas is done as described in the first method. If necessary, the procedure can be repeated.
+
+## Case Study: *Portrait of F. N. Sinyavina* by F. S. Rokotov
+
+In Russia, a large number of paintings that have previously been treated with beeswax currently require conservation. One of these works was the *Portrait of F. N. Sinyavina* painted by the great Russian artist Fyodor Rokotov (1735/1736–1808) in the State Historical Museum.
+
+The canvas of the painting had a big tear that had been fixed with beeswax (**figs. [48.1](fig-48-1), [48.2](fig-48-2))**, and losses of ground and paint layer had been filled with beeswax and then overpainted in oil (see [**fig. 48.1**](fig-48-1)). Over time, the wax had lost its adhesive strength, which resulted in the detachment of the tear edges and the formation of the strains in the canvas near the tear. The original paint layer was covered with surface dirt, overpaint, wax drops, and uneven and darkened varnish. The painting was stretched on a stretcher of a smaller size than it originally had, with the paint layer wrapped over the sides.
+
+As already mentioned, wax treatment limits the use of restoration materials other than synthetic or natural wax. To avoid repeated restoration of the painting using wax-based compositions, the beeswax needed to be removed from the canvas structure, and the AEROSIL-based paste was applied for this purpose.
+
+Removal of beeswax from the canvas was done using the first method described in the Procedure Outline section above. (It is worthwhile to note that during wax absorption the change in the paste color was not observed.) After the mineral spirit evaporated, the surface layer of the paste with absorbed beeswax was removed with a scalpel ([**fig. 48.3**](fig-48-3)), followed by the use of a bristle brush and vacuum cleaner for more complete cleaning.
+
+This procedure allowed 5% sturgeon glue to be used to consolidate the paint layer and ground. The tear was then mended thread-by-thread with a 5% solution of polyvinyl butyral (PVB) in isopropanol (with a high degree of purity) ([**fig. 48.4a, b**](fig-48-4)). On the reverse, the tear area was reinforced with additional threads taken from canvas edges to make the tear area more secure during stretching on a new stretcher.
+
+After the elimination of canvas deformations, losses to the ground were filled. Surface cleaning was done using a solution of one part of purified ox bile and four parts distilled water. After applying the mixture, the treated area was rinsed with distilled water. A mixture of ethanol and pinene (1:2), was used to thin the darkened varnish.
+
+After strip lining, the painting was stretched on a new stretcher of appropriate size for the picture; this also helps to control canvas tension. Retouching the paint losses was performed, and the surface of the painting was covered with protective varnish based on dammar resin. Labels with inscriptions from the old stretcher were transferred onto acid-free cardboard and fixed to the central bar of the new stretcher.
+
+## Conclusions
+
+We presented the results of the case study of applying a solvent paste based on fumed silica (AEROSIL) to remove beeswax from the canvas structure of a portrait painted by Russian artist Fyodor Rokotov. The painting had a large tear that had been previously fixed with beeswax, and ground losses had also been filled with beeswax and had oil overpaints. The removal of beeswax residues using AEROSIL paste enabled thread-by-thread tear mending using polyvinyl butyral adhesive and as well as the use of water-based glue to consolidate the paint layer. As a result of these treatments, lining the original canvas was able to be avoided.
+
+The suggested solvent paste based on AEROSIL proved to be a nice material for absorbing both beeswax and oil-resin stains from the structure of the canvas. It enables removal of these materials from local treated areas of paintings without any special equipment. Moreover, it allows using water-based glues to be used for further treatments in the future.
+
+{% backmatter %}
+
+## Notes
+
+{% endbackmatter %}
+
+[^1]: Personal communication between Vilena Kireeva, senior researcher at the Laboratory of Physical and Chemical Research at The State Research Institute for Restoration, and Maria Churakova, head of the Department of Scientific Conservation of Oil Paintings, 2003.
